[package]
name = "lemgine"
version = "0.1.3"
edition = "2018"
license = "MIT"
repository = "https://github.com/LonnonDev/Lemgine"
description = "An engine that's pretty good or bad idk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.30.2"